--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-:root {
-  max-width: 1440px;
-  padding: 32px 16px;
-}
-
-.main-title {
-  margin-bottom: 16px;
+#root {
+  max-width: 1080px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
