--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     max-width: 350px;
     gap: 8px;
-    border: 1px solid #000;
+    border: 1px solid #f7ebeb;
     border-radius: 8px;
     padding: 8px;
     margin-bottom: 24px;
@@ -19,7 +19,7 @@
   
   .formInput {
     display: flex;
-    border: 1px solid #000;
+    border: 1px solid #f7ebeb;
     border-radius: 4px;
     width: 100%;
     padding: 4px 8px;
@@ -30,7 +30,7 @@
   }
   
   .formSbmBtn {
-    border: 1px solid #747474;
+    border: 1px solid #f1e3e3;
     background-color: #f1f1f1;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px;
