--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -6,7 +6,7 @@
   }
   
   .searchBoxInput {
-    border: 1px solid #000;
+    border: 1px solid #f7ebeb;
     border-radius: 4px;
     width: 100%;
     padding: 4px 8px;
