--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,111 @@
-body {
-  font-family: sans-serif;
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 253, 208, 0.87);
+  background-color: rgba(255, 253, 208, 0.87);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
+* {
+  box-sizing: border-box;
+}
+
+*:focus {
+  outline: transparent;
+}
+
+a {
+  color: aquamarine;
+  font-weight: 500;
+  text-decoration: inherit;
+}
+
+a:hover,
+a:focus {
+  color: #fafafa;
+  transition: 250ms ease-in;
+}
+
+body {
   margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-ul,
-ol {
+header {
+  padding: 20px 0px;
+  border-bottom: 1px solid;
+  margin-bottom: 50px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-img {
-  display: block;
-  max-width: 100%;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
 button {
+  font-weight: 500;
   font-family: inherit;
-  cursor: pointer;
+  color: #1a1a1a;
+  background-color: aquamarine;
+  border-radius: 5px;
   border: none;
+  padding: 0.5em 1.2em;
+  height: 40px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 250ms linear;
 }
 
-a {
-  color: currentColor;
-  text-decoration: none;
+button:hover,
+button:focus {
+  background-color: rgb(75, 170, 139)
+}
+
+label {
+  cursor: pointer;
+}
+
+input {
+  height: 40px;
+  padding: 8px 10px;
+  border: 1px solid rgb(245, 237, 237);
+  background-color: inherit;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: box-shadow 300ms linear;
+  min-width: 300px;
+  font-size: 16px;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #b2c1cf;
+    background-color: #7e6dc2;
+  }
+
+  a:hover {
+    color: #335529;
+  }
+
+  button {
+    background-color: #f9f9f9;
+  }
 }
